fixed menu item alignment on right side

--- a/_sass/includes/_navbar.scss
+++ b/_sass/includes/_navbar.scss
@@ -80,8 +80,8 @@ nav {
 
     &#pull {
       i {
-        margin-top: 13px;
-        margin-right: 10px;
+        margin-top: 12px;
+        margin-right: 12px;
         float: right;
       }
 
@@ -119,6 +119,7 @@ nav {
     ul {
       width: 100%;
       overflow: hidden;
+      padding-right: 12px;
 
       /* fade out, then shrink */
       transition: opacity .25s 0s, font-size .25s 0s;
